vmazo/kill elastic LB

--- a/DotNetFrameworkApp.Worker.WebApp/.ebextensions/waf.config
+++ b/DotNetFrameworkApp.Worker.WebApp/.ebextensions/waf.config
@@ -1,6 +1,6 @@
 option_settings:
   aws:elasticbeanstalk:environment:
-    LoadBalancerType: application
+    # LoadBalancerType: application
   aws:elasticbeanstalk:customoption:
     BlockedHost1: 'exampletoblock.com'
 Resources:
