vmazo/kill eb extensions

--- a/DotNetFrameworkApp.API/DotNetFrameworkApp.API.csproj
+++ b/DotNetFrameworkApp.API/DotNetFrameworkApp.API.csproj
@@ -150,7 +150,7 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
-    # <Content Include=".ebextensions\waf.config" />
+    <!--# <Content Include=".ebextensions\waf.config" /> /> -->
     <Content Include="aws-windows-deployment-manifest.json" />
     <None Include="packages.config" />
   </ItemGroup>
