--- a/DotNetFrameworkApp.Worker.WebApp/DotNetFrameworkApp.Worker.WebApp.csproj
+++ b/DotNetFrameworkApp.Worker.WebApp/DotNetFrameworkApp.Worker.WebApp.csproj
@@ -116,7 +116,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="aws-windows-deployment-manifest.json" />
-   # <Content Include=".ebextensions\waf.config" />
+<!-- <Content Include=".ebextensions\waf.config" /> /> -->
     <None Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
