--- a/buildspec.yml
+++ b/buildspec.yml
@@ -25,14 +25,14 @@ phases:
       - cp .\DotNetFrameworkApp.API\obj\Release\Package\DotNetFrameworkApp.API.zip $publishApiFolder\DotNetFrameworkApp.API.zip
       - cp .\SetupScripts\InstallDependencies.ps1 $publishApiFolder\InstallDependencies.ps1
       - cp .\DotNetFrameworkApp.API\aws-windows-deployment-manifest.json $publishApiFolder\aws-windows-deployment-manifest.json
-      - cp .\DotNetFrameworkApp.API\.ebextensions $publishApiFolder -Recurse
+     #  - cp .\DotNetFrameworkApp.API\.ebextensions $publishApiFolder -Recurse
       - echo "Preparing Worker Source bundle artifacts"
       - $publishWorkerFolder = ".\publish\workspace\worker"; mkdir $publishWorkerFolder
       - cp .\DotNetFrameworkApp.Worker.WebApp\obj\Release\Package\DotNetFrameworkApp.Worker.WebApp.zip $publishWorkerFolder\DotNetFrameworkApp.Worker.WebApp.zip
       - cp -r .\DotNetFrameworkApp.Worker\bin\Release\ $publishWorkerFolder\DotNetFrameworkApp.Worker
       - cp .\SetupScripts\InstallWorker.ps1 $publishWorkerFolder\InstallWorker.ps1
       - cp .\DotNetFrameworkApp.Worker.WebApp\aws-windows-deployment-manifest.json $publishWorkerFolder\aws-windows-deployment-manifest.json
-      - cp .\DotNetFrameworkApp.Worker.WebApp\.ebextensions $publishWorkerFolder -Recurse
+     # - cp .\DotNetFrameworkApp.Worker.WebApp\.ebextensions $publishWorkerFolder -Recurse
 
 artifacts:
   files:
