Vitalemazo/adding controllers for routing

--- a/DotNetFrameworkApp.API/DotNetFrameworkApp.API.csproj
+++ b/DotNetFrameworkApp.API/DotNetFrameworkApp.API.csproj
@@ -133,6 +133,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\HealthController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
+    <Compile Include="Controllers\HelloWorldController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
